--- a/Frontend-practice1/index.html
+++ b/Frontend-practice1/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>FastDrop</title>
+   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
    <header class="top-header">
-      <!---LOGO-->
-      <p class="fastdrop-logo">FastDrop   |</p>
-      <p class="help">Help Center</p>
+      <div class="left-header">
 
-      <button class="btn-request">Submit a request </button>
-      <button btn-signin>Sign in </button>
+         <!---LOGO-->
+         <p class="fastdrop-logo">FastDrop |</p>
+         <p class="help"> Help Center</p>
+
+
+      </div>
+
+      <div class="right-header">
+
+         <button class="btn-request">Submit a request </button>
+         <button class="btn-signin">Sign in </button>
+
+
+      </div>
+
    </header>
-   
+
+   <div class="container">
+   <section class="below-header"> 
+      <h1 class="big-tag">How can we help ?</h1>
+      <div class="input-wrapper">
+         <input type="text" placeholder="Search" class="section-input">
+         <span class="arrow">➜</span>
+      </div>
+   </section>
+
+   </div>
 </body>
+
 </html>
