made cv using html

--- a/Begginer-HTML/index.html
+++ b/Begginer-HTML/index.html
@@ -29,7 +29,7 @@
    <p style="color: green;">Junior Frontend Developer</p>
 
    <p1>123 Mandir <br>
-      Kanglatongbi,Imphal,Manipur-795136
+      Kanglatongbi,Imphal,Manipur-795136<br>
       7005869xxx
       sharmaxxxxxx@gmail.com
    </p1>
