--- a/TODO-APP/index.html
+++ b/TODO-APP/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>TODO-APP</title>
 </head>
 <link rel="stylesheet" href="styles.css">
+
 <body>
-   <div class="body-container">
-     <div class="child-container">
+   <div class="body-container" id="body-container">
+      <div class="child-container" id="child-container">
 
-            <h1>TO-DO LIST <img src="./check-list.png"></h1>
-            <div class="input-group">
-            <input type="text" placeholder="Add Your task"> 
-            <button>Add</button>
+         <h1 id="main-title" class="title">TO-DO LIST <img src="./check-list.png" id="todo-icon" class="todo-icon"></h1>
+         <div class="input-group" id="input-group">
+            <input type="text" placeholder="Add Your task" id="task-input" class="task-input">
+            <button id="add-btn" class="add-btn" onclick="addTask">Add</button>
 
-            </div>
-      <p>Complete web dev projects</p> <br>
-      <p>Get S-Grade in IITM-BS course </p> <br>
-     </div>
+         </div>
+         <div class="task-container">
+
+            <p id="task1" class="task-item"><input type="checkbox" class="checkbox-task">Complete web dev projects</p>
+            <br>
+            <p id="task2" class="task-item"><input type="checkbox" class="checkbox-task">Get S-Grade in IITM-BS course
+            </p> <br>
+
+
+         </div>
+
+      </div>
    </div>
+   <script src="scripts.js"></script>
 </body>
+
 </html>
