--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,7 +6,27 @@
    <title>Document</title>
    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="card-container">
+  <div>
+
+  <h1 class="head">Temperature Conversion:</h1>
+  <input type="text" id="temp-input"><br>
+  <input type="radio" id="c-to-f" name="card">
+  <label for="c-to-f">Celcius -&gt;&gt;&gt; Fahrenheit</label><br>
+  <input type="radio" id="f-to-c" name="card">
+  <label for="f-to-c">Fahrenheit -&gt;&gt;&gt; Celcius</label><br>
+  <button id="convert-btn"
+  button.onClick= tempConvert();
+  
+  >Submit</button>
+  <p id="temp-result"></p>
+
+
+
+
+  </div>
+
+
  
 
 
