starting code for dice roller game

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,21 +7,14 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="card-container">
-  
-
-  <!--
-  <h1 class="head">Temperature Conversion:</h1>
-  <input type="text" id="temp-input"><br>
-  <input type="radio" id="c-to-f" name="card">
-  <label for="c-to-f">Celcius -&gt;&gt;&gt; Fahrenheit</label><br>
-  <input type="radio" id="f-to-c" name="card">
-  <label for="f-to-c">Fahrenheit -&gt;&gt;&gt; Celcius</label><br>
-  <button id="convert-btn"
-  button.onClick= tempConvert();
-  
-  >Submit</button>
-  <p id="temp-result"></p>
-  -->
+  <div>
+    <h1>Dice Roller </h1>
+    <input type="text" placeholder="Enter Your Number">
+    <button>Submit</button>
+    <p>Your's move:</p>
+    <p>Computer's Move:</p>
+    <img src="../Dice-Images/Dice-1.svg.png" width="350px">
+  </div>
 
 
 
