--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,7 +7,10 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="card-container">
-  
+  <button onclick="startTimer()">START
+  </button>
+    <button onclick="endTimer()">STOP
+  </button>
   <script src="scripts.js"></script>
 </body> 
 
