--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,10 +7,9 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="card-container">
-  <button onclick="startTimer()">START
-  </button>
-    <button onclick="endTimer()">STOP
-  </button>
+<div id="clock-container">
+  <div id="clock">00.00.00</div>
+</div>
   <script src="scripts.js"></script>
 </body> 
 
