--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="card-container">
-<div id="clock-container">
-  <div id="clock">00.00.00</div>
-</div>
+  <h1 id="myH1"> STOPWATCH</h1>
+
+
+  
+  <div id="container">
+    <div id="display">
+      00.00.00.
+    </div>
+    <div id="controls">
+      <button id="start-btn" onclick="start()">START</button>
+      <button id="stop-btn" onclick="stop()">STOP</button>
+      <button id="reset-btn" onclick="reset()">RESET</button>
+    </div>
+  </div>
   <script src="scripts.js"></script>
-</body> 
+</body>
 
 </html>
