--- a/javascript/index.html
+++ b/javascript/index.html
@@ -8,22 +8,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="card-container">
-  <h1 id="myH1"> STOPWATCH</h1>
+<body class="container">
 
-
-
-  <div id="container">
-    <div id="display">
-      00.00.00.00
-    </div>
-    <div id="controls">
-      <button id="start-btn" onclick="start()">START</button>
-      <button id="stop-btn" onclick="stop()">STOP</button>
-      <button id="reset-btn" onclick="reset()">RESET</button>
-    </div>
-  </div>
-  <script src="scripts.js"></script>
+  <script  type="module" src="scripts.js"></script>
 </body>
 
 </html>
