--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body class="container">
-
+  <div id="box1"></div>
+<div id="box1">1</div>
+<div id="box1">2</div>
+<div id="box1">3</div>
+<div id="box1">4</div>
+<div id="box1">5</div>
   <script  type="module" src="scripts.js"></script>
 </body>
 
