MOUSE RELATED EVENT IN JAVASCRIPT

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body class="container">
-  <div id="box1"></div>
-<div id="box1">1</div>
-<div id="box1">2</div>
-<div id="box1">3</div>
-<div id="box1">4</div>
-<div id="box1">5</div>
+   <div id="box1">Divas Sharma</div>
+
+   <button id="log-btn">LOGIN </button>
+
+
   <script  type="module" src="scripts.js"></script>
+  
 </body>
 
 </html>
