KEY EVENTS IN JAVASCRIPTS

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -13,6 +13,8 @@
 
    <button id="log-btn">LOGIN </button>
 
+   <button id="sign-btn">SIGN IN</button>
+
 
   <script  type="module" src="scripts.js"></script>
   
