HIDE OR SHOW IMAGE IN HTML USING JAVASCRIPT

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,13 +9,8 @@
 </head>
 
 <body class="container">
-   <div id="box1">Divas Sharma</div>
-
-   <button id="log-btn">LOGIN </button>
-
-   <button id="sign-btn">SIGN IN</button>
-
-
+  <button id="mybutton">Click Me</button>
+<img src="premium_photo-1697729862026-8f486fcd7f8b.jpeg" width="400px" id="click">
   <script  type="module" src="scripts.js"></script>
   
 </body>
