CLASSLIST IN JAVASCRIPT

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,8 +9,21 @@
 </head>
 
 <body class="container">
-  <button id="mybutton">Click Me</button>
-<img src="premium_photo-1697729862026-8f486fcd7f8b.jpeg" width="400px" id="click">
+<div class="container">
+  <button class="btn" data-box="box1">Button 1</button>
+  <button class="btn" data-box="box2">Button 2</button>
+  <button class="btn" data-box="box3">Button 3</button>
+  <button class="btn" data-box="box4">Button 4</button>
+  <button class="btn" data-box="box5">Button 5</button>
+</div>
+
+<div class="boxes">
+  <div id="box1" class="box"></div>
+  <div id="box2" class="box"></div>
+  <div id="box3" class="box"></div>
+  <div id="box4" class="box"></div>
+  <div id="box5" class="box"></div>
+</div>
   <script  type="module" src="scripts.js"></script>
   
 </body>
