--- a/javascript/index.html
+++ b/javascript/index.html
@@ -8,24 +8,20 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="container">
-<div class="container">
-  <button class="btn" data-box="box1">Button 1</button>
-  <button class="btn" data-box="box2">Button 2</button>
-  <button class="btn" data-box="box3">Button 3</button>
-  <button class="btn" data-box="box4">Button 4</button>
-  <button class="btn" data-box="box5">Button 5</button>
-</div>
+<body>
 
-<div class="boxes">
-  <div id="box1" class="box"></div>
-  <div id="box2" class="box"></div>
-  <div id="box3" class="box"></div>
-  <div id="box4" class="box"></div>
-  <div id="box5" class="box"></div>
-</div>
-  <script  type="module" src="scripts.js"></script>
-  
+
+  <div class="silder ">
+    <div id="sildess" class="slides">
+      <img class="slide" src="porshe.jpg">
+      <img class="slide" src="porshe1.jpg">
+      <img class="slide" src="porshe3.jpg">
+    </div>
+    <button class="prev" onclick="prevSlide()">&#10094</button>
+    <button class="next" onclick="nextSlide()">&#10095</button>
+  </div>
+  <script type="module" src="scripts.js"></script>
+
 </body>
 
 </html>
