--- a/javascript/index.html
+++ b/javascript/index.html
@@ -20,7 +20,7 @@
     <button class="prev" onclick="prevSlide()">&#10094</button>
     <button class="next" onclick="nextSlide()">&#10095</button>
   </div>
-  <script type="module" src="scripts.js"></script>
+  <script src="scripts.js"></script>
 
 </body>
 
