FTECH DATA FROM API IN JAVASCRIPT

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-
-
+<input type="text" id="pokemon-name" placeholder="enter pokemon name ">
+<button onclick="fetchData()">Fetch Pokemon</button>
+<img src="" id="pokemonSprite" style="display: block;">
   <script src="scripts.js"></script>
 
 </body>
